--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,8 @@
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.nuget.newtonsoft-json": "file:E:/com.unity.nuget.newtonsoft-json-master",
+    "com.unity.nuget.newtonsoft-json": "file:C:/Users/sirta/Downloads/com.unity.nuget.newtonsoft-json-master/com.unity.nuget.newtonsoft-json-master",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "12.1.10",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
